Migrate to Spring Boot 4.1 / Java 25 and Jackson 3; release 1.0.0
- Spring Boot 3.5.15 -> 4.1.0, Java 21 -> 25; groupId com.ubs.lending; version 1.0.0
- Jackson 2 -> 3: all com.fasterxml databind/core usage moved to tools.jackson;
  jackson-databind 2 dependency removed; BbResultConverter rebuilt on JsonMapper.builder()
- Boot 4 modularized starters: spring-boot-starter-flyway (bare flyway-core no longer
  auto-configures migrations), spring-boot-starter-webmvc-test (@AutoConfigureMockMvc
  moved to org.springframework.boot.webmvc.test.autoconfigure), and
  spring-boot-starter-security-test (@WithMockUser visibility in MockMvc)
- Jackson 2 contract parity: spring.jackson.deserialization.fail-on-null-for-primitives=false
- report_history consolidated into V1_1__schema.sql, V1_4 removed — fresh databases only;
  existing instances need flyway repair or a reset
- Maven wrapper removed; builds require a local Maven 3.9 install
- Ignore runtime logs/ and uploads/ directories

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>